<resources>
    <string name="app_name">Sensor Data Collector</string>
    <string name="title_text">Did you go for jogging today?</string>
    <string name="option1">Yes</string>
    <string name="option2">No</string>
    <string name="aust">AUST</string>
    <string name="nsu">NSU</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="group1">10-15</string>
    <string name="group2">15-20</string>
    <string name="group3">20-25</string>
    <string name="group4">25+</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Instructions</string>
    <string name="menu_slideshow">About</string>
    <string name="menu_exit">Exit</string>



</resources>