<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".UserinfoActivity">


    <TextView
        android:id="@+id/uname"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="40dp"
        android:text="University:"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content" />
    <TextView
        android:textStyle="bold"
        android:layout_marginLeft="110dp"
        android:id="@+id/gender"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"
        android:text="Gender:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:textStyle="bold"
        android:layout_marginLeft="110dp"
        android:id="@+id/age"
        android:layout_marginTop="260dp"
        android:textColor="@color/black"
        android:text="Age Group:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:id="@+id/uni_radio_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:textStyle="bold"
            android:id="@+id/n_aust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/aust"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="190dp"
            android:checked="false"
            />
        <RadioButton
            android:textStyle="bold"

            android:id="@+id/n_nsu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/nsu"
            android:layout_marginLeft="190dp"
            android:checked="false"
            ></RadioButton>
    </RadioGroup>
    <RadioGroup
        android:id="@+id/gender_radio_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:textStyle="bold"
            android:id="@+id/n_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/male"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="190dp"
            android:checked="false"
            ></RadioButton>
        <RadioButton
            android:textStyle="bold"
            android:id="@+id/n_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/female"
            android:layout_marginLeft="190dp"
            android:checked="false"
            ></RadioButton>
    </RadioGroup>
    <RadioGroup

        android:id="@+id/age_range_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:textStyle="bold"
            android:layout_marginTop="280dp"
            android:layout_marginLeft="190dp"
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group1"
            android:textColor="@color/black"
            android:checked="false"

            ></RadioButton>
        <RadioButton
            android:textStyle="bold"
            android:layout_marginLeft="190dp"
            android:id="@+id/b2"
            android:layout_below="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group2"
            android:textColor="@color/black"
            android:checked="false"

            ></RadioButton>
        <RadioButton
            android:textStyle="bold"
            android:layout_marginLeft="190dp"
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group3"
            android:textColor="@color/black"
            android:checked="false"

            ></RadioButton>
        <RadioButton
            android:textStyle="bold"
            android:layout_marginLeft="190dp"
            android:id="@+id/b4"
            android:layout_below="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group4"
            android:textColor="@color/black"
            android:checked="false"

            ></RadioButton>
    </RadioGroup>

   <Button
       android:id="@+id/submit"

       android:layout_marginTop="500dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="190dp"
       android:text="Submit"></Button>
</RelativeLayout>